Update API pythoon example to python3

--- a/ckanext/odata/templates/ajax_snippets/api_info.html
+++ b/ckanext/odata/templates/ajax_snippets/api_info.html
@@ -138,10 +138,10 @@ Example
       <div id="collapse-python" class="accordion-body collapse">
         <div class="accordion-inner">
           <pre>
-import urllib
+from urllib import request
 url = '{{ h.url_for(qualified=True, controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5) + '&q=title:jones' }}'  {# not urlencoding the ":" because its clearer #}
-fileobj = urllib.urlopen(url)
-print fileobj.read()
+fileobj = request.urlopen(url)
+print(fileobj.read())
 </pre>
         </div>
       </div>
