Update sample Python Example based on feedback
changed import to urllib.request and included json library to easier parse response

--- a/ckanext/odata/templates/ajax_snippets/api_info.html
+++ b/ckanext/odata/templates/ajax_snippets/api_info.html
@@ -138,10 +138,12 @@ Example
       <div id="collapse-python" class="accordion-body collapse">
         <div class="accordion-inner">
           <pre>
-from urllib import request
+import json
+import urllib.request
 url = '{{ h.url_for(qualified=True, controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5) + '&q=title:jones' }}'  {# not urlencoding the ":" because its clearer #}
-fileobj = request.urlopen(url)
-print(fileobj.read())
+fileobj = urllib.request.urlopen(url)
+fileobj_json = json.loads(fileobj.read())
+print(fileobj_json)
 </pre>
         </div>
       </div>
