--- a/ckanext/odata/templates/ajax_snippets/api_info.html
+++ b/ckanext/odata/templates/ajax_snippets/api_info.html
@@ -142,9 +142,9 @@ import json
 import urllib.request
 url = '{{ h.url_for(qualified=True, controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5) + '&q=title:jones' }}'  {# not urlencoding the ":" because its clearer #}
 fileobj = urllib.request.urlopen(url)
-fileobj_json = json.loads(fileobj.read())
-print(fileobj_json)
-</pre>
+response_dict = json.loads(fileobj.read())
+print(response_dict)
+          </pre>
         </div>
       </div>
     </div>
