--- a/ckanext/odata/templates/ajax_snippets/api_info.html
+++ b/ckanext/odata/templates/ajax_snippets/api_info.html
@@ -13,143 +13,148 @@ Example
 {% set resource_id = h.sanitize_id(resource_id) %}
 {% set sql_example_url = h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search_sql', qualified=True) + '?sql=SELECT * from "' + resource_id + '" WHERE \"title\" LIKE \'jones\'' %}
 {# not urlencoding the sql because its clearer #}
-<div{% if not embedded %} class="modal"{% endif %}>
-  <div class="modal-header">
-    <h3>
-      {{ _('CKAN Data API') }}
-    </h3>
-  </div>
-  <div{% if not embedded %} class="modal-body"{% endif %}>
-    <p><strong>{{ _('Access resource data via a web API with powerful query support') }}</strong>.
-    {% trans %}
-    Further information in the <a
-      href="http://docs.ckan.org/en/latest/maintaining/datastore.html" target="_blank">main
-      CKAN Data API and DataStore documentation</a>.</p>
-    {% endtrans %}
-    <div class="accordion" id="accordion2">
-    <div class="accordion-group">
-      <div class="accordion-heading">
-
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-endpoints">{{ _('Endpoints') }} &raquo;</a>
+<div{% if not embedded %} class="modal fade"{% endif %}>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>
+          {{ _('CKAN Data API') }}
+        </h3>
       </div>
-      <div id="collapse-endpoints" class="in accordion-body collapse">
-        <div class="accordion-inner">
-          <p>{{ _('The Data API can be accessed via the following actions of the CKAN action API.') }}</p>
-          <table class="table-condensed table-striped table-bordered">
-            <thead></thead>
-            <tbody>
-              <tr>
-                <th scope="row">{{ _('Create') }}</th>
-                <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_create', qualified=True) }}</code></td>
-              </tr>
-              <tr>
-                <th scope="row">{{ _('Update / Insert') }}</th>
-                <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_upsert', qualified=True) }}</code></td>
-              </tr>
-              <tr>
-                <th scope="row">{{ _('Query') }}</th>
-                <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', qualified=True) }}</code></td>
-              </tr>
-              <tr>
-                <th scope="row">{{ _('Query (via SQL)') }}</th>
-                <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search_sql', qualified=True) }}</code></td>
-              </tr>
+      <div{% if not embedded %} class="modal-body"{% endif %}>
+        <p><strong>{{ _('Access resource data via a web API with powerful query support') }}</strong>.
+        {% trans %}
+        Further information in the <a
+          href="http://docs.ckan.org/en/latest/maintaining/datastore.html" target="_blank">main
+          CKAN Data API and DataStore documentation</a>.</p>
+        {% endtrans %}
+        <div class="panel-group accordion" id="accordion2">
+        <div class="panel panel-default accordion-group">
+          <div class="panel-heading accordion-heading">
 
-            </tbody>
-          </table>
-          <p></p>
-          <table class="table-condensed table-striped table-bordered">
-            <thead></thead>
-            <tbody>
-              <tr>
-                <th scope="row"><a href="http://www.odata.org" target="_blank"><img src="http://www.odata.org/assets/ODataLogo-24.png"></a>OData</th>
-                <td><code><a href="{{ h.ckanext_odata_link(resource_id) }}" target="_blank">{{ h.ckanext_odata_link(resource_id) }}</a></code></td>
-              </tr>
-            </tbody>
-          </table>
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-endpoints">{{ _('Endpoints') }} &raquo;</a>
+          </div>
+          <div id="collapse-endpoints" class="in panel-collapse collapse accordion-body">
+            <div class="accordion-inner">
+              <p>{{ _('The Data API can be accessed via the following actions of the CKAN action API.') }}</p>
+              <table class="table-condensed table-striped table-bordered">
+                <thead></thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">{{ _('Create') }}</th>
+                    <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_create', qualified=True) }}</code></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">{{ _('Update / Insert') }}</th>
+                    <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_upsert', qualified=True) }}</code></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">{{ _('Query') }}</th>
+                    <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', qualified=True) }}</code></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">{{ _('Query (via SQL)') }}</th>
+                    <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search_sql', qualified=True) }}</code></td>
+                  </tr>
+
+                </tbody>
+              </table>
+              <p></p>
+              <table class="table-condensed table-striped table-bordered">
+                <thead></thead>
+                <tbody>
+                  <tr>
+                    <th scope="row"><a href="http://www.odata.org" target="_blank"><img src="http://www.odata.org/assets/ODataLogo-24.png"></a>OData</th>
+                    <td><code><a href="{{ h.ckanext_odata_link(resource_id) }}" target="_blank">{{ h.ckanext_odata_link(resource_id) }}</a></code></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="accordion-group">
-      <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-querying">{{ _('Querying') }} &raquo;</a>
-      </div>
-      <div id="collapse-querying" class="collapse accordion-body in">
-        <div class="accordion-inner">
-          <strong>{{ _('Query example (first 5 results)') }}</strong>
-          <p>
-          <code><a href="{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5, qualified=True) }}" target="_blank">{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5, qualified=True) }}</a></code>
-          </p>
+        <div class="panel panel-default accordion-group">
+          <div class="panel-heading accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-querying">{{ _('Querying') }} &raquo;</a>
+          </div>
+          <div id="collapse-querying" class="panel-collapse accordion-body in collapse">
+            <div class="panel-body accordion-inner">
+              <strong>{{ _('Query example (first 5 results)') }}</strong>
+              <p>
+              <code><a href="{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5, qualified=True) }}" target="_blank">{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5, qualified=True) }}</a></code>
+              </p>
 
-          <strong>{{ _('Query example (results containing \'jones\')') }}</strong>
-          <p>
-          <code><a href="{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, q='jones', qualified=True) }}" target="_blank">{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, q='jones', qualified=True) }}</a></code>
-          </p>
+              <strong>{{ _('Query example (results containing \'jones\')') }}</strong>
+              <p>
+              <code><a href="{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, q='jones', qualified=True) }}" target="_blank">{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, q='jones', qualified=True) }}</a></code>
+              </p>
 
-          <strong>{{ _('Query example (via SQL statement)') }}</strong>
-          <p>
-          <code><a href="{{sql_example_url}}" target="_blank">{{sql_example_url}}</a></code>
-          </p>
+              <strong>{{ _('Query example (via SQL statement)') }}</strong>
+              <p>
+              <code><a href="{{sql_example_url}}" target="_blank">{{sql_example_url}}</a></code>
+              </p>
 
-          <strong>{{ _('OData example (first 5 results, skip 1)') }}</strong>
-          <p>
-          <code><a href="{{ h.ckanext_odata_link(resource_id) }}?$top=5&$skip=1" target="_blank">{{ h.ckanext_odata_link(resource_id) }}?$top=5&$skip=1</a></code>
-          </p>
+              <strong>{{ _('OData example (first 5 results, skip 1)') }}</strong>
+              <p>
+              <code><a href="{{ h.ckanext_odata_link(resource_id) }}?$top=5&$skip=1" target="_blank">{{ h.ckanext_odata_link(resource_id) }}?$top=5&$skip=1</a></code>
+              </p>
 
-          <strong>{{ _('OData example (first 5 results, return as OData JSON)') }}</strong>
-          <p>
-          <code><a href="{{ h.ckanext_odata_link(resource_id) }}?$top=5&$format=json" target="_blank">{{ h.ckanext_odata_link(resource_id) }}?$top=5&$format=json</a></code>
-          </p>
+              <strong>{{ _('OData example (first 5 results, return as OData JSON)') }}</strong>
+              <p>
+              <code><a href="{{ h.ckanext_odata_link(resource_id) }}?$top=5&$format=json" target="_blank">{{ h.ckanext_odata_link(resource_id) }}?$top=5&$format=json</a></code>
+              </p>
 
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="accordion-group">
-      <div class="accordion-heading">
-       <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-javascript">{{ _('Example: Javascript') }} &raquo;</a>
-      </div>
-      <div id="collapse-javascript" class="accordion-body collapse">
-        <div class="accordion-inner">
-          <p>{{ _('A simple ajax (JSONP) request to the data API using jQuery.') }}</p>
-          <pre>
-  var data = {
-    resource_id: '{{resource_id}}', // the resource id
-    limit: 5, // get 5 results
-    q: 'jones' // query for 'jones'
-  };
-  $.ajax({
-    url: '{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', qualified=True) }}',
-    data: data,
-    dataType: 'jsonp',
-    success: function(data) {
-      alert('Total results found: ' + data.result.total)
-    }
-  });</pre>
+        <div class="panel panel-default accordion-group">
+          <div class="panel-heading accordion-heading">
+           <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-javascript">{{ _('Example: Javascript') }} &raquo;</a>
+          </div>
+          <div id="collapse-javascript" class="panel-collapse accordion-body collapse">
+            <div class="panel-body accordion-inner">
+              <p>{{ _('A simple ajax (JSONP) request to the data API using jQuery.') }}</p>
+              <pre>
+var data = {
+  resource_id: '{{resource_id}}', // the resource id
+  limit: 5, // get 5 results
+  q: 'jones' // query for 'jones'
+};
+$.ajax({
+  url: '{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search', qualified=True) }}',
+  data: data,
+  dataType: 'jsonp',
+  success: function(data) {
+    alert('Total results found: ' + data.result.total)
+  }
+});
+              </pre>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="accordion-group">
-      <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-python">{{ _('Example: Python') }} &raquo;</a>
-      </div>
-      <div id="collapse-python" class="accordion-body collapse">
-        <div class="accordion-inner">
-          <pre>
+        <div class="panel panel-default accordion-group">
+          <div class="panel-heading accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="accordion2" href="#collapse-python">{{ _('Example: Python') }} &raquo;</a>
+          </div>
+          <div id="collapse-python" class="panel-collapse accordion-body collapse">
+            <div class="panel-body accordion-inner">
+              <pre>
 import json
 import urllib.request
 url = '{{ h.url_for(qualified=True, controller='api', action='action', ver=3, logic_function='datastore_search', resource_id=resource_id, limit=5) + '&q=title:jones' }}'  {# not urlencoding the ":" because its clearer #}
 fileobj = urllib.request.urlopen(url)
 response_dict = json.loads(fileobj.read())
 print(response_dict)
-          </pre>
+              </pre>
+            </div>
+          </div>
         </div>
+        </div>
+
       </div>
     </div>
   </div>
-
-</div>
 
 </div>
