--- a/ckanext/odata/templates/ajax_snippets/api_info.html
+++ b/ckanext/odata/templates/ajax_snippets/api_info.html
@@ -13,7 +13,7 @@ Example
 {% set resource_id = h.sanitize_id(resource_id) %}
 {% set sql_example_url = h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search_sql', qualified=True) + '?sql=SELECT * from "' + resource_id + '" WHERE \"title\" LIKE \'jones\'' %}
 {# not urlencoding the sql because its clearer #}
-<div{% if not embedded %} class="modal fade"{% endif %}>
+<div{% if not embedded %} id="api-info-embed" class="modal fade"{% endif %}>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
